Fix: Errores del Sonar